@@ -1,0 +1,106 @@
+/*
+ * Copyright 2007, Intel Corporation
+ *
+ * This file is part of PowerTOP
+ *
+ * This program file is free software; you can redistribute it and/or modify it
+ * under the terms of the GNU General Public License as published by the
+ * Free Software Foundation; version 2 of the License.
+ *
+ * This program is distributed in the hope that it will be useful, but WITHOUT
+ * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+ * FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
+ * for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program in a file named COPYING; if not, write to the
+ * Free Software Foundation, Inc.,
+ * 51 Franklin Street, Fifth Floor,
+ * Boston, MA 02110-1301 USA
+ *
+ * Authors:
+ * 	Arjan van de Ven <arjan@linux.intel.com>
+ */
+
+#include <unistd.h>
+#include <stdio.h>
+#include <stdlib.h>
+#include <string.h>
+#include <stdint.h>
+#include <sys/types.h>
+#include <dirent.h>
+
+#include "powertop.h"
+
+int alpm_activated;
+
+static void activate_usb_autosuspend(void)
+{
+	DIR *dir;
+	struct dirent *dirent;
+	FILE *file;
+	char filename[PATH_MAX];
+
+	dir = opendir("/sys/bus/usb/devices");
+	if (!dir)
+		return;
+
+	while ((dirent = readdir(dir))) {
+		if (dirent->d_name[0]=='.')
+			continue;
+		sprintf(filename, "/sys/bus/usb/devices/%s/power/autosuspend", dirent->d_name);
+		file = fopen(filename, "w");
+		if (!file)
+			continue;
+		fprintf(file, "1\n");
+		fclose(file);
+	}
+
+	closedir(dir);
+	alpm_activated = 1;
+}
+
+void suggest_usb_autosuspend(void)
+{
+	DIR *dir;
+	struct dirent *dirent;
+	FILE *file;
+	char filename[PATH_MAX];
+	char line[1024];
+	int need_hint  = 0;
+
+	if (alpm_activated)
+		return;
+
+
+	dir = opendir("/sys/bus/usb/devices");
+	if (!dir)
+		return;
+
+	while ((dirent = readdir(dir))) {
+		if (dirent->d_name[0]=='.')
+			continue;
+		sprintf(filename, "/sys/bus/usb/devices/%s/power/autosuspend", dirent->d_name);
+		file = fopen(filename, "r");
+		if (!file)
+			continue;
+		memset(line, 0, 1024);
+		if (fgets(line, 1023,file)==NULL) {
+			fclose(file);
+			continue;
+		}
+		if (!strstr(line, "1"))
+			need_hint = 1;
+
+		fclose(file);
+	}
+
+	closedir(dir);
+
+	if (need_hint) {
+		add_suggestion(_("Suggestion: Enable USB autosuspend by pressing the U key or adding \n"
+				 "usbcore.autosuspend=1 to the kernel command line in /etc/grub.conf"
+				 ),
+				45, 'U', _(" U - Enable USB suspend "), activate_usb_autosuspend);
+	}
+}
