@@ -3,6 +3,7 @@
 	* add suggestion to enable INOTIFY in the kernel
 	* fix socket fd leak, found by Nikerabbit on #powertop
 	* Add support for deferrable timers (Scott Lamb)
+	* Add active hint to enable USB autosuspend on Fedora 7
 
 1.7 --  Jun 17th, 2007
 	* add suggestion to disable TV out
